Change name and update

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 	</section>
 
 	<footer>
-		<p>&copy; Joyo Glass</p>
+		<p style="background-color: 1AA7EC;">&copy; Joyo Glass</p>
 	</footer>
 
 </body>
