--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 	<link rel="stylesheet" type="text/css" href="styless.css">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
 	<script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
-	<script src="swiper-init.js"></script>
+	<script src="swiper-innit.js"></script>
 </head>
 <body>
 	<header>
@@ -44,7 +44,7 @@
 				<a href="https://www.instagram.com/joyoglass/" target="_blank">
 					<i class="fab fa-instagram"></i>
 				</a>
-				<a href="https://www.facebook.com/profile.php?id=100088949289840&mibextid=ZbWKwL" target="_blank">
+				<a href="https://www.facebook.com/people/Joyo-Glass/pfbid0UUQFMKCFf9t6v66x5DA91Qrdip1g3XCLFNBCGFZsUSYqeuCJ7ov46GPhp6GXR1Zil/" target="_blank">
 					<i class="fab fa-facebook"></i>
 				</a>
 			</div>
@@ -52,7 +52,7 @@
 	</section>
 
 	<footer>
-		<p style="background-color: 1AA7EC;">&copy; Joyo Glass</p>
+		<p>&copy; Joyo Glass</p>
 	</footer>
 
 </body>
