--- a/index.html
+++ b/index.html
@@ -8,13 +8,14 @@
 	<link rel="stylesheet" type="text/css" href="styless.css">
 	<link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
 	<script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
-	<script src="swiper-innit.js"></script>
+	<script src="navbar.js"></script>
 </head>
 <body>
 	<header>
 		<h1>Joyo Glass</h1>
 		<nav>
 			<ul>
+				<li><a class="menu-icon" onclick="toggleMenu()"></a></li>
 				<li><a href="#home">Home</a></li>
 				<li><a href="#product">Product</a></li>
 				<li><a href="#contact-us">Contact Us</a></li>
